# clapy-derive

./: .gitignore  README.md  publish.bat  pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
src/clapy_derive/: __init__.py  _decorator.py  _field.py  _types.py
