[project]
name = "clapy-derive"
version = "0.2.0"
description = "A clap-inspired declarative CLI argument parser for Python"
readme = "README.md"
authors = [{ name = "cet", email = "cets021@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.3"]
